style: update demo.gif version 2

--- a/desktop/project/nbproject/project.properties
+++ b/desktop/project/nbproject/project.properties
@@ -35,8 +35,10 @@ dist.jlink.output=${dist.jlink.dir}/MoPhongThuatToanSapXep
 excludes=
 file.reference.miglayout-4.0.jar=E:\\Du_an\\DuAnMau\\miglayout-4.0.jar
 file.reference.miglayout-4.0.jar-1=C:\\Users\\ADMIN\\Desktop\\simulation-sort-algorithm-main\\lib\\miglayout-4.0.jar
+file.reference.miglayout-4.0.jar-2=..\\lib\\miglayout-4.0.jar
 file.reference.TimingFramework-0.55.jar=E:\\Du_an\\DuAnMau\\TimingFramework-0.55.jar
 file.reference.TimingFramework-0.55.jar-1=C:\\Users\\ADMIN\\Desktop\\simulation-sort-algorithm-main\\lib\\TimingFramework-0.55.jar
+file.reference.TimingFramework-0.55.jar-2=..\\lib\\TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -44,7 +46,9 @@ javac.classpath=\
     ${file.reference.miglayout-4.0.jar}:\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.TimingFramework-0.55.jar-1}:\
-    ${file.reference.miglayout-4.0.jar-1}
+    ${file.reference.miglayout-4.0.jar-1}:\
+    ${file.reference.TimingFramework-0.55.jar-2}:\
+    ${file.reference.miglayout-4.0.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
